# ktjst-c-recipe

./: README.md  recipe.yml
templates/: CMakeLists.txt  README.md  a.out  atlas.inl  build.sh  main.c  microui.h  microui_renderer.c  microui_renderer.h  oldmain.c
templates/s/: init.sh
templates/src/: main.c
tests/defaults/: test.yml
